fix a 1 pixel overflow on the body

--- a/share/static/alice-dark.css
+++ b/share/static/alice-dark.css
@@ -31,7 +31,7 @@ ul#controls li {
 
 ul#controls li.dropdown {
   width: 24px;
-  height: 24px;
+  height: 23px;
   border: none;
   padding: 0;
   margin: 0;
